syntax = "proto3";

package hwscFileTransactionSvc;

// Service: define the methods that gRPC server can expose to the client
service FileTransactionService{
    rpc GetStatus (FileTransactionRequest) returns (FileTransactionResponse){}
    rpc UploadFile (stream Chunk) returns (FileTransactionResponse){}
    rpc DownloadZipFiles (FileTransactionRequest) returns (stream Chunk){}
}

message FileTransactionRequest{
    string message = 1;
    string name = 2;
    repeated string urls = 3;
}

message FileTransactionResponse{
    oneof status {uint32 code = 1;}
    string message = 2;
    string url = 3;
    int64 length = 4;
}

message Buffer{
    bytes buffer = 1;
}

message Metadata{
    string fileName = 1;
    string filePath = 2;
    repeated string image = 3;
    repeated string audio = 4;
    repeated string video = 5;
    repeated string file = 6;
    //enum Type{
      //  IMAGE = 0;
      //  AUDIO = 1;
      //  VIDEO = 2;
      //  FILE = 3;
    //}
    //Type fileType = 3;
}

message Chunk{
    oneof test_oneof{
        Buffer buffer = 1;
        Metadata meta = 2;
    }
}
